--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Leading University</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science</div>
+              <div>Computer Science and Engineering</div>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">January 2019 - May 2022</span>
+              <span class="text-primary">January 2019 - December 2022</span>
             </div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
               <h3 class="mb-0">Sylhet Cambrian School & College</h3>
-              <div class="subheading mb-3">Science</div>
+              <div class="subheading mb-3">HSC</div>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">August 2016 - May 2018</span>
@@ -159,7 +159,7 @@
           >
             <div class="flex-grow-1">
               <h3 class="mb-0">Public High School</h3>
-              <div class="subheading mb-3">Science</div>
+              <div class="subheading mb-3">SSC</div>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">January 2014 - February 2016</span>
